src/test/deca/context/invalid/class/double-def-method.deca
// Programme testant la double définition de méthodes

// Erreur ligne 7

class A {
    void method() {}
    void method() {}
}
